# avstack

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/: lint.yaml  test-port.yaml
avstack/: __main__.py  listobjs.py
original/: README.md  avstack.html  avstack.pl
port/: README.md  avstack.pl  avstack.py
pythonport/: avstack.py
tests/: test_port.py
tests/fixtures/ZSWatch/: README.md  objdump
tests/fixtures/objdump/: .gitignore  README.md
